version/0.6/_sources/api/ansys/rocky/core/exceptions/index.rst.txt






The ``exceptions.py`` module
============================

.. py:module:: ansys.rocky.core.exceptions


Summary
-------








.. py:currentmodule:: exceptions
.. tab-set::






    .. tab-item:: Exceptions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.rocky.core.exceptions.ApiClientError`
            - Provides the generic exception for the PyRocky API.


          * - :py:obj:`~ansys.rocky.core.exceptions.NotSupportedError`
            - Provides the error to be raised when feature/parameter/version is not supported.


          * - :py:obj:`~ansys.rocky.core.exceptions.LaunchError`
            - Provides the error raised when problems occurs during launch of the Rocky app.


          * - :py:obj:`~ansys.rocky.core.exceptions.ApiServerError`
            - Provides the ``Exception`` class for an error generated within the API layer.












.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-md-lightning_bolt"></span> ApiClientError</api/ansys/rocky/core/exceptions/ApiClientError>
    <span class="nf nf-md-lightning_bolt"></span> NotSupportedError</api/ansys/rocky/core/exceptions/NotSupportedError>
    <span class="nf nf-md-lightning_bolt"></span> LaunchError</api/ansys/rocky/core/exceptions/LaunchError>
    <span class="nf nf-md-lightning_bolt"></span> ApiServerError</api/ansys/rocky/core/exceptions/ApiServerError>







Description
-----------

Module where the exception classes of the project are contained.

..
    !! processed by numpydoc !!







